sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:8: error: '(' expected but identifier found.
  for i <- 1 to getNombreValeurs()-1) {
      ^AlgInsertionSort:22: error: illegal start of simple expression
} 
^